--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
+    <!-- General -->
     <string name="app_name">TweetsPie</string>
+
+    <!-- Errors -->
+    <string name="error_invalid_username">Only letters, numbers and underscores are allowed.</string>
+
+    <!-- Hints -->
+    <string name="hint_username">Username</string>
+
+    <!-- Actions -->
+    <string name="action_confirm">Confirm</string>
 </resources>
