Handle mentions, hashtags and urls

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <!-- Urls -->
     <string name="url_user" translatable="false">https://twitter.com/%s</string>
     <string name="url_tweet" translatable="false">https://twitter.com/%s/status/%s</string>
+    <string name="url_hashtag" translatable="false">https://twitter.com/hashtag/%s</string>
 
     <!-- Actions -->
 
