Add on demand data refresh

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="url_hashtag" translatable="false">https://twitter.com/hashtag/%s</string>
 
     <!-- Actions -->
+    <string name="action_refresh">Refresh</string>
 
     <!-- Utils -->
     <string name="notification_channel_tweets">Tweets</string>
